syntax = "proto3";
package nexus.api;
option go_package = "github.com/flipkart-incubator/nexus/pkg/api";

import "google/protobuf/empty.proto";
import "models/internal.proto";

message Status {
  int32 code = 1;
  string message = 2;
}

message SaveRequest {
  bytes data = 1;
  map<string, bytes> args = 2;
}

message SaveResponse {
  Status status = 1;
  bytes reqData = 2;
  bytes resData = 3;
}

message LoadRequest {
  bytes data = 1;
  map<string, bytes> args = 2;
}

message LoadResponse {
  Status status = 1;
  bytes reqData = 2;
  bytes resData = 3;
}

message AddNodeRequest {
  string nodeUrl = 1;
}

message RemoveNodeRequest {
  string nodeUrl = 1;
}


message ListNodesResponse {
  Status status = 1;
  uint64 leader = 2;
  map<uint64, models.NodeInfo> nodes = 3;
}

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
}

service Nexus {
  rpc Check (HealthCheckRequest) returns (HealthCheckResponse);
  rpc Save (SaveRequest) returns (SaveResponse);
  rpc Load (LoadRequest) returns (LoadResponse);
  rpc AddNode (AddNodeRequest) returns (Status);
  rpc RemoveNode (RemoveNodeRequest) returns (Status);
  rpc ListNodes (google.protobuf.Empty) returns (ListNodesResponse);
}
